# MUF-Clust

./: .gitignore  1119.md  1120.md  ARCHITECTURE.md  README.md  cptest.py  csv文档每列含义.md  environment.yml  guide.md  pyproject.toml  script.txt  setup.py  test.csv  test.py
.trae/rules/: project_rules.md
notebooks/: cluster_visualization.ipynb  read_qptiff_openslide.ipynb  read_qptiff_tifffile_multichannel.ipynb  view_cluster_map_tiff.ipynb
scripts/: cluster_csv_to_points_json.py  cluster_features_from_csv.py  sample_roi_features.py  single_image_cluster_points_to_tiff.py  single_image_seg_feat_cluster.py  visualize_clusters_on_tiles.py
src/muf_clust/: __init__.py  cli.py  config.py
src/muf_clust/api/: __init__.py  cli.py  pipeline_api.py
src/muf_clust/configs/: channels_bladder.yaml  channels_kidney.yaml  defaults.yaml
src/muf_clust/core/: __init__.py  pipeline.py
src/muf_clust/core/steps/: __init__.py  cluster.py  features.py  preprocess.py  segmentation.py  visualize.py
src/muf_clust/integrations/: __init__.py  fiftyone.py  wandb.py
src/muf_clust/plugins/: __init__.py  base.py  registry.py
src/muf_clust/utils/: __init__.py  logging.py  paths.py
